--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/02/23 10:30:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignup.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignup@402a079c]">ti</td> 
-  <td>main@3213500</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/02/23 11:15:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MenuButton.ti()[pri:0, instance:com.playphone.msportsUI.MenuButton@5bcab519]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@36202360</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/02/23 11:15:30</td>   <td>6737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MenuButton.test()[pri:0, instance:com.playphone.msportsUI.MenuButton@5bcab519]">test</td> 
+  <td>main@36202360</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/02/23 11:15:31</td>   <td>8040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MenuButton.tearDown()[pri:0, instance:com.playphone.msportsUI.MenuButton@5bcab519]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@36202360</td>   <td></td> </tr>
 </table>
