test out put files

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/01 14:56:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateAccountTest.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.CreateAccountTest@73ad2d6]">NewAccountSignup</td> 
-  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/01 14:56:02</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateAccountTest.tearDown()[pri:0, instance:com.playphone.msportsUI.CreateAccountTest@73ad2d6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/07 12:32:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignupNegative.SignupNegative()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@56ac3a89]">SignupNegative</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/07 12:32:08</td>   <td>8249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignupNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@56ac3a89]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/07 12:31:49</td>   <td>-11489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignupNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignupNegative@56ac3a89]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
