--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.playphone.msportsUI.CreateAccountTest</td>
+<td>com.playphone.msportsUI.AccountSignupNegative</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>NewAccountSignup</td>
+<td>SignupNegative</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -19,6 +19,10 @@
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>ti</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
