changes to accountusernamenegative test case

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<tr bgcolor="bd9462">  <td>17/03/07 13:20:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginPasswordNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@56ac3a89]">&gt;&gt;ti</td> 
+<tr bgcolor="bd9462">  <td>17/03/08 15:16:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountLoginUsernameNegative.ti()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@56ac3a89]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/07 13:21:03</td>   <td>10375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginPasswordNegative.TestInvalidPassword()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@56ac3a89]">TestInvalidPassword</td> 
+<tr bgcolor="bd9462">  <td>17/03/08 15:16:19</td>   <td>11807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountLoginUsernameNegative.TestInvalidUsername()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@56ac3a89]">TestInvalidUsername</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/07 13:21:04</td>   <td>11782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginPasswordNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginPasswordNegative@56ac3a89]">&lt;&lt;tearDown</td> 
-=======
-<tr bgcolor="bd9462">  <td>17/03/08 13:58:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignUpWithGoogle.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithGoogle@56ac3a89]">&gt;&gt;ti</td> 
-=======
-<tr bgcolor="bd9462">  <td>17/03/08 15:05:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ClickPlayNow.ti()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow@56ac3a89]">&gt;&gt;ti</td> 
->>>>>>> master
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/08 15:05:15</td>   <td>8949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClickPlayNow.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow@56ac3a89]">NewAccountSignup</td> 
-  <td>main@1604125387</td>   <td></td> </tr>
-<<<<<<< HEAD
-<tr bgcolor="bd9462">  <td>17/03/08 13:58:56</td>   <td>46078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignUpWithGoogle.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithGoogle@56ac3a89]">&lt;&lt;tearDown</td> 
->>>>>>> master
-=======
-<tr bgcolor="bd9462">  <td>17/03/08 15:05:53</td>   <td>46885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClickPlayNow.tearDown()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow@56ac3a89]">&lt;&lt;tearDown</td> 
->>>>>>> master
+<tr bgcolor="bd9462">  <td>17/03/08 15:16:40</td>   <td>33131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountLoginUsernameNegative.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountLoginUsernameNegative@56ac3a89]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
