Changes to elements owing to changes in Nav-bar UI

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/16 16:08:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountSignUpWithFacebook.NewAccountSignup()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">NewAccountSignup</td> 
-  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/16 16:09:13</td>   <td>46592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountSignUpWithFacebook.tearDown()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/16 16:08:17</td>   <td>-9484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountSignUpWithFacebook.ti()[pri:0, instance:com.playphone.msportsUI.AccountSignUpWithFacebook@56ac3a89]">&gt;&gt;ti</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/21 11:18:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportCommunity.SupportCommunity()[pri:0, instance:com.playphone.msportsUI.HomePageSupportCommunity@6e1567f1]">SupportCommunity</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/03/21 11:20:57</td>   <td>122536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportContactUs.SupportContactUs()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@4566e5bd]">SupportContactUs</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="b6bec2">  <td>17/03/21 11:19:27</td>   <td>32810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportFAQ.SupportFAQ()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFAQ@5cb9f472]">SupportFAQ</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>17/03/21 11:20:12</td>   <td>77867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportFeedback.SupportFeedback()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFeedback@13805618]">SupportFeedback</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>17/03/21 11:19:49</td>   <td>55218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportPrivacyPolicy.SupportPrivacyPolicy()[pri:0, instance:com.playphone.msportsUI.HomePageSupportPrivacyPolicy@cb644e]">SupportPrivacyPolicy</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/03/21 11:20:34</td>   <td>100096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageSupportTC.SupportTC()[pri:0, instance:com.playphone.msportsUI.HomePageSupportTC@56ef9176]">SupportTC</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/21 11:19:17</td>   <td>22400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportCommunity.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportCommunity@6e1567f1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="b6bec2">  <td>17/03/21 11:19:39</td>   <td>45163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportFAQ.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFAQ@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>17/03/21 11:20:02</td>   <td>67801</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportPrivacyPolicy.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportPrivacyPolicy@cb644e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>17/03/21 11:20:25</td>   <td>90353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportFeedback.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFeedback@13805618]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/03/21 11:20:47</td>   <td>112494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportTC.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportTC@56ef9176]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/03/21 11:21:09</td>   <td>134984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageSupportContactUs.tearDown()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@4566e5bd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="bd9462">  <td>17/03/21 11:18:45</td>   <td>-9702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportCommunity.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportCommunity@6e1567f1]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="b6bec2">  <td>17/03/21 11:19:18</td>   <td>23352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportFAQ.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFAQ@5cb9f472]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>17/03/21 11:19:40</td>   <td>45432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportPrivacyPolicy.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportPrivacyPolicy@cb644e]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>17/03/21 11:20:02</td>   <td>68068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportFeedback.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportFeedback@13805618]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="60af79">  <td>17/03/21 11:20:25</td>   <td>90632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportTC.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportTC@56ef9176]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="83a2f9">  <td>17/03/21 11:20:47</td>   <td>112809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageSupportContactUs.ti()[pri:0, instance:com.playphone.msportsUI.HomePageSupportContactUs@4566e5bd]">&gt;&gt;ti</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
 </table>
