adding edit user profile test case

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/21 14:57:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ClickPlayNow0.ti()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow0@56ac3a89]">&gt;&gt;ti</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 11:08:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EditUserProfile.ti()[pri:0, instance:com.playphone.msportsUI.EditUserProfile@56ac3a89]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/21 14:58:09</td>   <td>10292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ClickPlayNow0.ClickPlayNowButton0()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow0@56ac3a89]">ClickPlayNowButton0</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 11:08:53</td>   <td>27803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EditUserProfile.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.EditUserProfile@56ac3a89]">TestValidLogin</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/21 14:58:33</td>   <td>34964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ClickPlayNow0.tearDown()[pri:0, instance:com.playphone.msportsUI.ClickPlayNow0@56ac3a89]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 11:10:01</td>   <td>95303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;EditUserProfile.tearDown()[pri:0, instance:com.playphone.msportsUI.EditUserProfile@56ac3a89]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
