added 4 more test cases

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd9462">  <td>17/03/22 11:42:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AllGamesMenu.ti()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@56ac3a89]">&gt;&gt;ti</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 13:16:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;playTournamentMsportsClose.ti()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@56ac3a89]">&gt;&gt;ti</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/22 11:42:22</td>   <td>10120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AllGamesMenu.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@56ac3a89]">TestValidLogin</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 13:16:19</td>   <td>13651</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="playTournamentMsportsClose.TestValidLogin()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@56ac3a89]">TestValidLogin</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd9462">  <td>17/03/22 11:42:50</td>   <td>38529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AllGamesMenu.tearDown()[pri:0, instance:com.playphone.msportsUI.AllGamesMenu@56ac3a89]">&lt;&lt;tearDown</td> 
+<tr bgcolor="bd9462">  <td>17/03/22 13:16:59</td>   <td>54101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;playTournamentMsportsClose.tearDown()[pri:0, instance:com.playphone.msportsUI.playTournamentMsportsClose@56ac3a89]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
